buttons: Fix vertical alignment

--- a/theme/parts/buttons.css
+++ b/theme/parts/buttons.css
@@ -43,6 +43,7 @@ button.close,
 #editBMPanel_newFolderButton,
 .unified-extensions-item-menu-button {
 	-moz-appearance: none !important;
+	align-items: center !important;
 	background: var(--gnome-button-background) !important;
 	border-radius: 6px !important;
 	border: 0 !important;
